test/fixtures/public/fail/syntactical/MissingRightPar.jmm
class MissingRightPar {
	public static void main(String[] args) {
	while (i < 10 {
		}
	}
}